apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'kotlin-kapt'
apply plugin: 'com.google.gms.google-services'



apply plugin: 'dagger.hilt.android.plugin' // TODO Hilt step 2

android {
    compileSdkVersion 29
    buildToolsVersion '29.0.2'
    defaultConfig {
        applicationId "com.myapp.lexicon"
        minSdkVersion 19
        targetSdkVersion 29
        versionName 'beta'
        versionCode 36
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += [
                        "room.schemaLocation":"$projectDir/schemas".toString(),
                        "room.incremental":"true",
                        "room.expandProjection":"true"]
            }
        }
    }
    buildTypes {
        debug {
            debuggable true
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    productFlavors {
    }
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'com.sothree.slidinguppanel:library:3.4.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.preference:preference-ktx:1.1.1'

    implementation 'androidx.multidex:multidex:2.0.1'

    //ViewPager2
    implementation "androidx.viewpager2:viewpager2:1.0.0"

    //firebase
    implementation 'com.google.firebase:firebase-core:18.0.1'
    implementation 'com.google.firebase:firebase-storage:19.2.1'
    implementation 'com.google.firebase:firebase-ads:19.7.0'
    implementation 'com.google.firebase:firebase-appindexing:19.1.0'

    implementation 'com.google.android.gms:play-services-ads:19.7.0'
    implementation 'com.google.android.gms:play-services-plus:17.0.0'
    implementation 'com.google.android.gms:play-services-auth:19.0.0'

    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'

    testImplementation 'junit:junit:4.13.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'

    //implementation 'com.android.volley:volley:1.1.1'

    implementation 'androidx.browser:browser:1.3.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    //Hilt   TODO Hilt step 3
    implementation 'com.google.dagger:hilt-android:2.30.1-alpha'
    kapt 'com.google.dagger:hilt-android-compiler:2.30.1-alpha'
    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
    // When using Kotlin.
    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'

    //region Room
    implementation "androidx.room:room-runtime:2.2.6"
    // optional - Kotlin Extensions and Coroutines support for Room
    //implementation "androidx.room:room-ktx:2.2.5"
    kapt "androidx.room:room-compiler:2.2.6"
    //implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
    // optional - Test helpers
    //testImplementation "androidx.room:room-testing:2.2.5"
    //endregion

    //reactivex
    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
    implementation 'androidx.room:room-rxjava2:2.2.6'

    //jsoup
    implementation 'org.jsoup:jsoup:1.13.1'

    //eventbus
    implementation 'org.greenrobot:eventbus:3.1.1'

    //implementation 'androidx.percentlayout:percentlayout:1.0.0'

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.21"

    //GSON
    implementation 'com.google.code.gson:gson:2.8.6'
}


